Correction lien facebook

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </a>
 
             <!-- Facebook -->
-            <a href="https://www.facebook.com/profile.php?id=100075381456789" target="_blank"
+            <a href="https://www.facebook.com/share/17WqukLQgn/?mibextid=wwXIfr?id=100075381456789" target="_blank"
                class="group flex items-center gap-4 w-full bg-blue-900/20 
                       px-6 py-4 rounded-xl border border-blue-500/30 
                       hover:border-blue-400 hover:bg-blue-600/20 
